# editorconfig-lsp

./: LICENSE  README.md  definitions.py  diagnostics.py  parser.py  protocol.py  protocols.py  pyproject.toml  server.py  test.py  test_server.py
src/editorconfig_lsp/: definitions.py  diagnostics.py  parser.py  server.py
